--- a/microbenchmarks/Makefile
+++ b/microbenchmarks/Makefile
@@ -13,14 +13,14 @@ collect: concrete/results.txt slidingscale/bigNum/SlidingScaleResults.txt
 	mv slidingscale/bigNum/SlidingScaleResults.txt SlidingScaleResults.txt
 
 concrete/results.txt:
-	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX="$(TSX)" -C concrete
+	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX=$(TSX) -C concrete
 
 concrete/shortresults.txt:
-	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX="$(TSX)" -C concrete shortresults.txt
+	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX=$(TSX) -C concrete shortresults.txt
 
 slidingscale/bigNum/SlidingScaleResults.txt:
-	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX="$(TSX)" -C slidingscale/bigNum/
-	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX="$(TSX)"  -j4 -C slidingscale/bigNum/ SlidingScaleResults.txt
+	$(MAKE) CONTAINER="$(CONTAINER)" CFLAGS="$(CFLAGS)" TSX=$(TSX) -C slidingscale/bigNum/
+	$(MAKE) CONTAINER="$(CONTAINER)" TSX=$(TSX) -j4 -C slidingscale/bigNum/ SlidingScaleResults.txt
 
 
 clean:
